Refactor query with unnamed class